Added icons + go to NET 8

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
-    "BlendLauncherWPF": {
-      "commandName": "Project",
-      //"commandLineArgs": "\"\\test.blend\""
+    "BlendLauncher": {
+      "commandName": "Project"
     }
   }
 }
